@@ -1066,19 +1066,15 @@ static const UV large_ram_upper_idx[] = {
   UVCONST(  5136852322734), UVCONST(  6654037637976), UVCONST(  8663089898701),
   UVCONST( 11333068937712), UVCONST( 14903446657241), UVCONST( 19702880416316),
   /* 11026, 11025, 11024,   11023, 11022, 11021,   11020, 11019, 11018 */
-  UVCONST( 26192198741217),
-  UVCONST( 35007464587700),  /* TODO */
-  UVCONST( 47072080175048),  /* TODO */
-  UVCONST( 63662369320719),  /* TODO */
-  UVCONST( 86631548367209),  /* TODO */
-  UVCONST(118640390543125),  /* TODO */
-  UVCONST(163548495872000),  /* TODO */
-  UVCONST(227096395776000),  /* TODO */
-  UVCONST(317827579904000),  /* TODO */
-  UVCONST(446676598784000),  /* TODO */
-  1.5*UVCONST(446676598784000),  /* TODO */
-  1.6*1.5*UVCONST(446676598784000),  /* TODO */
-  1.6*1.6*1.5*UVCONST(446676598784000),  /* TODO */
+  UVCONST( 26192198741217), UVCONST( 35007464587700), UVCONST( 47072080175048),
+  UVCONST( 63662369320719), UVCONST( 86631548367209), UVCONST(118640390543125),
+  UVCONST(163548371026622),
+  UVCONST(226945400832000),  /* estimates past this point */
+  UVCONST(317156491264000),
+  UVCONST(446676598784000),
+  1.5*UVCONST(446676598784000),
+  1.5*1.5*UVCONST(446676598784000),
+  1.6*1.5*1.5*UVCONST(446676598784000),
 };
 #define LARGE_NRAM_UPPER_MULT 11075
 #define LARGE_NRAM_UPPER (sizeof(large_ram_upper_idx)/sizeof(large_ram_upper_idx[0]))
@@ -1150,16 +1146,16 @@ static const UV large_ram_lower_idx[] = {
   UVCONST( 22497437657452), UVCONST( 31726512746004), UVCONST( 45096957879914),
   UVCONST( 64630470145902),
   UVCONST( 93416220154664),
-  UVCONST(136210022400001), /* TODO */
-  UVCONST(200429010944001), /* TODO */
-  UVCONST(292057776128001), /* TODO */
-  UVCONST(412316860416000), /* TODO */
-  1.40*UVCONST(412316860416000), /* TODO */
-  1.96*UVCONST(412316860416000), /* TODO */
-  2.74*UVCONST(412316860416000), /* TODO */
-  3.84*UVCONST(412316860416000), /* TODO */
-  5.37*UVCONST(412316860416000), /* TODO */
-  7.53*UVCONST(412316860416000), /* TODO */
+  UVCONST(136212119552001), /* estimates past this point */
+  UVCONST(200433729536001),
+  UVCONST(297694920704001),
+  UVCONST(442381631488001),
+  1.45*UVCONST(442381631488001),
+  2.10*UVCONST(442381631488001),
+  3.04*UVCONST(442381631488001),
+  4.40*UVCONST(442381631488001),
+  6.40*UVCONST(442381631488001),
+  9.29*UVCONST(442381631488001),
 };
 #define LARGE_NRAM_LOWER_MULT 4225
 #define LARGE_NRAM_LOWER (sizeof(large_ram_lower_idx)/sizeof(large_ram_lower_idx[0]))
@@ -1262,8 +1258,8 @@ UV* n_range_ramanujan_primes(UV nlo, UV nhi) {
   if (nlo <= 2 && nhi >= 2) L[2-nlo] = 11;
   if (nhi < 3) return L;
 
-  mink = nth_ramanujan_prime_lower(nlo);
-  maxk = nth_ramanujan_prime_upper(nhi);
+  mink = nth_ramanujan_prime_lower(nlo) - 1;
+  maxk = nth_ramanujan_prime_upper(nhi) + 1;
 
   if (mink < 15) mink = 15;
   if (mink % 2 == 0) mink--;
